[gd_scene load_steps=19 format=2]

[ext_resource path="res://Script/TrackEdit.gd" type="Script" id=1]
[ext_resource path="res://Script/MoveGizmo.gd" type="Script" id=2]
[ext_resource path="res://Script/RotateGizmo.gd" type="Script" id=3]
[ext_resource path="res://Nodes/Track.tscn" type="PackedScene" id=4]
[ext_resource path="res://Script/EditCamera.gd" type="Script" id=5]

[sub_resource type="CylinderMesh" id=1]

top_radius = 0.1
bottom_radius = 0.1
radial_segments = 16
rings = 1

[sub_resource type="SpatialMaterial" id=2]

flags_transparent = true
flags_unshaded = true
albedo_color = Color( 0, 1, 0, 0.501961 )

[sub_resource type="CylinderShape" id=3]

radius = 0.098813

[sub_resource type="SpatialMaterial" id=4]

flags_transparent = true
flags_unshaded = true
albedo_color = Color( 1, 0, 0, 0.501961 )

[sub_resource type="SpatialMaterial" id=5]

flags_transparent = true
flags_unshaded = true
albedo_color = Color( 0, 0, 1, 0.501961 )

[sub_resource type="CylinderMesh" id=6]

height = 0.05
radial_segments = 32
rings = 1

[sub_resource type="SpatialMaterial" id=7]

flags_unshaded = true
albedo_color = Color( 1, 0, 0, 0.501961 )

[sub_resource type="CylinderShape" id=8]

height = 0.05

[sub_resource type="SpatialMaterial" id=9]

flags_unshaded = true
albedo_color = Color( 0, 1, 0, 0.501961 )

[sub_resource type="SpatialMaterial" id=10]

flags_unshaded = true
albedo_color = Color( 0, 0, 1, 1 )

[sub_resource type="CubeMesh" id=11]

size = Vector3( 1, 1, 1 )

[sub_resource type="SphereMesh" id=12]

radius = 0.05
height = 0.1
radial_segments = 16
rings = 16

[sub_resource type="SpatialMaterial" id=13]

flags_unshaded = true
albedo_color = Color( 0, 0, 0, 1 )

[node name="Root" type="Spatial"]
script = ExtResource( 1 )

[node name="MoveGizmo" type="Spatial" parent="."]
editor/display_folded = true
visible = false
script = ExtResource( 2 )

[node name="YArea" type="Area" parent="MoveGizmo"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1, 0 )
input_ray_pickable = true
input_capture_on_drag = true

[node name="MeshInstance" type="MeshInstance" parent="MoveGizmo/YArea"]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="MoveGizmo/YArea"]
shape = SubResource( 3 )

[node name="XArea" type="Area" parent="MoveGizmo"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 1.1, 0, 0 )
input_ray_pickable = true
input_capture_on_drag = true

[node name="MeshInstance" type="MeshInstance" parent="MoveGizmo/XArea"]
mesh = SubResource( 1 )
material/0 = SubResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="MoveGizmo/XArea"]
shape = SubResource( 3 )

[node name="ZArea" type="Area" parent="MoveGizmo"]
transform = Transform( 1.91069e-15, -4.37114e-08, -1, -1, -4.37114e-08, 0, -4.37114e-08, 1, -4.37114e-08, 0, 0, 1.1 )
input_ray_pickable = true
input_capture_on_drag = true

[node name="MeshInstance" type="MeshInstance" parent="MoveGizmo/ZArea"]
mesh = SubResource( 1 )
material/0 = SubResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="MoveGizmo/ZArea"]
shape = SubResource( 3 )

[node name="RotateGizmo" type="Spatial" parent="."]
editor/display_folded = true
visible = false
script = ExtResource( 3 )

[node name="XArea" type="Area" parent="RotateGizmo"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
input_ray_pickable = true
input_capture_on_drag = true

[node name="MeshInstance" type="MeshInstance" parent="RotateGizmo/XArea"]
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="RotateGizmo/XArea"]
shape = SubResource( 8 )

[node name="YArea" type="Area" parent="RotateGizmo"]
input_ray_pickable = true
input_capture_on_drag = true

[node name="MeshInstance" type="MeshInstance" parent="RotateGizmo/YArea"]
mesh = SubResource( 6 )
material/0 = SubResource( 9 )

[node name="CollisionShape" type="CollisionShape" parent="RotateGizmo/YArea"]
shape = SubResource( 8 )

[node name="ZArea" type="Area" parent="RotateGizmo"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
input_ray_pickable = true
input_capture_on_drag = true

[node name="MeshInstance" type="MeshInstance" parent="RotateGizmo/ZArea"]
mesh = SubResource( 6 )
material/0 = SubResource( 10 )

[node name="CollisionShape" type="CollisionShape" parent="RotateGizmo/ZArea"]
shape = SubResource( 8 )

[node name="MeshInstance" type="MeshInstance" parent="RotateGizmo"]
visible = false
mesh = SubResource( 11 )
material/0 = null

[node name="Track" parent="." instance=ExtResource( 4 )]

[node name="CamPos" type="Spatial" parent="."]
script = ExtResource( 5 )

[node name="Camera" type="Camera" parent="CamPos"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6 )

[node name="MeshInstance" type="MeshInstance" parent="CamPos"]
mesh = SubResource( 12 )
material/0 = SubResource( 13 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="LoadPanel" type="PanelContainer" parent="UI"]
margin_left = 10.0
margin_top = 10.0
margin_right = 149.0
margin_bottom = 44.0

[node name="LoadContainer" type="HBoxContainer" parent="UI/LoadPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 312.0
margin_bottom = 31.0

[node name="TrackName" type="LineEdit" parent="UI/LoadPanel/LoadContainer"]
margin_right = 58.0
margin_bottom = 24.0

[node name="LoadButton" type="Button" parent="UI/LoadPanel/LoadContainer"]
margin_left = 62.0
margin_right = 104.0
margin_bottom = 24.0
text = "Load"

[node name="SaveButton" type="Button" parent="UI/LoadPanel/LoadContainer"]
margin_left = 108.0
margin_right = 149.0
margin_bottom = 24.0
text = "Save"

[node name="FlyButton" type="Button" parent="UI/LoadPanel/LoadContainer"]
margin_left = 153.0
margin_right = 183.0
margin_bottom = 24.0
text = "Fly"

[node name="ExitButton" type="Button" parent="UI/LoadPanel/LoadContainer"]
margin_left = 187.0
margin_right = 222.0
margin_bottom = 24.0
text = "Exit"

[node name="SceneOption" type="OptionButton" parent="UI/LoadPanel/LoadContainer"]
margin_left = 226.0
margin_right = 305.0
margin_bottom = 24.0
text = "Scene"

[node name="ToolPanel" type="Panel" parent="UI"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -165.0
margin_right = 190.0
margin_bottom = 165.0

[node name="ToolContainer" type="VBoxContainer" parent="UI/ToolPanel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="OptionButton" type="OptionButton" parent="UI/ToolPanel/ToolContainer"]
margin_right = 190.0
margin_bottom = 20.0
text = "Tool"
align = 1

[node name="GateToolContainer" type="VBoxContainer" parent="UI/ToolPanel/ToolContainer"]
editor/display_folded = true
margin_top = 24.0
margin_right = 190.0
margin_bottom = 51.0

[node name="Label" type="Label" parent="UI/ToolPanel/ToolContainer/GateToolContainer"]
margin_right = 190.0
margin_bottom = 14.0
text = "Choose Type:"

[node name="ItemList" type="ItemList" parent="UI/ToolPanel/ToolContainer/GateToolContainer"]
margin_top = 18.0
margin_right = 190.0
margin_bottom = 27.0
auto_height = true

[node name="ObjectToolContainer" type="VBoxContainer" parent="UI/ToolPanel/ToolContainer"]
visible = false
margin_top = 55.0
margin_right = 190.0
margin_bottom = 82.0

[node name="Label" type="Label" parent="UI/ToolPanel/ToolContainer/ObjectToolContainer"]
margin_right = 190.0
margin_bottom = 14.0
text = "Choose Type:"

[node name="ItemList" type="ItemList" parent="UI/ToolPanel/ToolContainer/ObjectToolContainer"]
margin_top = 18.0
margin_right = 190.0
margin_bottom = 27.0
auto_height = true

[node name="MoveToolContainer" type="VBoxContainer" parent="UI/ToolPanel/ToolContainer"]
editor/display_folded = true
visible = false
margin_top = 37.0
margin_right = 190.0
margin_bottom = 135.0

[node name="PosLabel" type="Label" parent="UI/ToolPanel/ToolContainer/MoveToolContainer"]
margin_right = 190.0
margin_bottom = 14.0
text = "pos:"

[node name="XPos" type="HBoxContainer" parent="UI/ToolPanel/ToolContainer/MoveToolContainer"]
margin_top = 18.0
margin_right = 190.0
margin_bottom = 42.0

[node name="Label" type="Label" parent="UI/ToolPanel/ToolContainer/MoveToolContainer/XPos"]
margin_top = 5.0
margin_right = 12.0
margin_bottom = 19.0
text = "X:"

[node name="SpinBox" type="SpinBox" parent="UI/ToolPanel/ToolContainer/MoveToolContainer/XPos"]
margin_left = 16.0
margin_right = 90.0
margin_bottom = 24.0
step = 0.1
allow_greater = true
allow_lesser = true

[node name="YPos" type="HBoxContainer" parent="UI/ToolPanel/ToolContainer/MoveToolContainer"]
editor/display_folded = true
margin_top = 46.0
margin_right = 190.0
margin_bottom = 70.0

[node name="Label" type="Label" parent="UI/ToolPanel/ToolContainer/MoveToolContainer/YPos"]
margin_top = 5.0
margin_right = 11.0
margin_bottom = 19.0
text = "Y:"

[node name="SpinBox" type="SpinBox" parent="UI/ToolPanel/ToolContainer/MoveToolContainer/YPos"]
margin_left = 15.0
margin_right = 89.0
margin_bottom = 24.0
step = 0.1
allow_greater = true
allow_lesser = true

[node name="ZPos" type="HBoxContainer" parent="UI/ToolPanel/ToolContainer/MoveToolContainer"]
editor/display_folded = true
margin_top = 74.0
margin_right = 190.0
margin_bottom = 98.0

[node name="Label" type="Label" parent="UI/ToolPanel/ToolContainer/MoveToolContainer/ZPos"]
margin_top = 5.0
margin_right = 12.0
margin_bottom = 19.0
text = "Z:"

[node name="SpinBox" type="SpinBox" parent="UI/ToolPanel/ToolContainer/MoveToolContainer/ZPos"]
margin_left = 16.0
margin_right = 90.0
margin_bottom = 24.0
step = 0.1
allow_greater = true
allow_lesser = true

[node name="RotateToolContainer" type="VBoxContainer" parent="UI/ToolPanel/ToolContainer"]
editor/display_folded = true
visible = false
margin_top = 24.0
margin_right = 190.0
margin_bottom = 38.0

[node name="Label" type="Label" parent="UI/ToolPanel/ToolContainer/RotateToolContainer"]
margin_right = 190.0
margin_bottom = 14.0
text = "rot:"

[node name="XPos" type="HBoxContainer" parent="UI/ToolPanel/ToolContainer/RotateToolContainer"]
margin_top = 31.0
margin_right = 190.0
margin_bottom = 55.0

[node name="Label" type="Label" parent="UI/ToolPanel/ToolContainer/RotateToolContainer/XPos"]
margin_top = 5.0
margin_right = 12.0
margin_bottom = 19.0
text = "X:"

[node name="SpinBox" type="SpinBox" parent="UI/ToolPanel/ToolContainer/RotateToolContainer/XPos"]
margin_left = 16.0
margin_right = 90.0
margin_bottom = 24.0
allow_greater = true
allow_lesser = true

[node name="YPos" type="HBoxContainer" parent="UI/ToolPanel/ToolContainer/RotateToolContainer"]
margin_top = 59.0
margin_right = 190.0
margin_bottom = 83.0

[node name="Label" type="Label" parent="UI/ToolPanel/ToolContainer/RotateToolContainer/YPos"]
margin_top = 5.0
margin_right = 11.0
margin_bottom = 19.0
text = "Y:"

[node name="SpinBox" type="SpinBox" parent="UI/ToolPanel/ToolContainer/RotateToolContainer/YPos"]
margin_left = 15.0
margin_right = 89.0
margin_bottom = 24.0
allow_greater = true
allow_lesser = true

[node name="ZPos" type="HBoxContainer" parent="UI/ToolPanel/ToolContainer/RotateToolContainer"]
margin_top = 87.0
margin_right = 190.0
margin_bottom = 111.0

[node name="Label" type="Label" parent="UI/ToolPanel/ToolContainer/RotateToolContainer/ZPos"]
margin_top = 5.0
margin_right = 12.0
margin_bottom = 19.0
text = "Z:"

[node name="SpinBox" type="SpinBox" parent="UI/ToolPanel/ToolContainer/RotateToolContainer/ZPos"]
margin_left = 16.0
margin_right = 90.0
margin_bottom = 24.0
allow_greater = true
allow_lesser = true

[node name="ObjectPaintContainer" type="VBoxContainer" parent="UI/ToolPanel/ToolContainer"]
visible = false
margin_top = 55.0
margin_right = 190.0
margin_bottom = 92.0

[node name="ItemList" type="ItemList" parent="UI/ToolPanel/ToolContainer/ObjectPaintContainer"]
margin_top = 28.0
margin_right = 190.0
margin_bottom = 37.0
auto_height = true

[node name="Distance" type="HBoxContainer" parent="UI/ToolPanel/ToolContainer/ObjectPaintContainer"]
margin_right = 190.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="UI/ToolPanel/ToolContainer/ObjectPaintContainer/Distance"]
margin_top = 5.0
margin_right = 60.0
margin_bottom = 19.0
text = "Distance:"

[node name="SpinBox" type="SpinBox" parent="UI/ToolPanel/ToolContainer/ObjectPaintContainer/Distance"]
margin_left = 64.0
margin_right = 138.0
margin_bottom = 24.0
step = 0.1
value = 2.0
allow_greater = true
allow_lesser = true

[node name="TreePanel" type="Panel" parent="UI"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -157.5
margin_top = -120.0
margin_right = 157.5

[node name="TrackTree" type="Tree" parent="UI/TreePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
allow_reselect = true
allow_rmb_select = true
hide_root = true
select_mode = 1

[node name="PopupMenu2" type="PopupMenu" parent="UI/TreePanel/TrackTree"]
margin_left = 165.0
margin_top = -150.0
margin_right = 228.0
margin_bottom = -116.0
items = [ "Up", null, 0, false, false, -1, 0, null, "", false, "Down", null, 0, false, false, -1, 0, null, "", false, "Delete", null, 0, false, false, -1, 0, null, "", false ]

[node name="LoadDialog" type="WindowDialog" parent="UI"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -150.0
margin_right = 90.0
margin_bottom = 90.0
window_title = "Load"

[node name="Label" type="Label" parent="UI/LoadDialog"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_top = 10.0
margin_right = 20.0
margin_bottom = 24.0
text = "Load:"

[node name="TrackList" type="ItemList" parent="UI/LoadDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = -100.0
margin_right = 110.0
margin_bottom = 60.0
allow_rmb_select = true

[node name="NewTrackName" type="LineEdit" parent="UI/LoadDialog"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -40.0
margin_right = 170.0
margin_bottom = -16.0

[node name="NewButton" type="Button" parent="UI/LoadDialog"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -40.0
margin_right = -10.0
margin_bottom = -20.0
text = "New"

[node name="PopupMenu" type="PopupMenu" parent="UI/LoadDialog"]
margin_right = 20.0
margin_bottom = 20.0
items = [ "Delete", null, 0, false, false, -1, 0, null, "", false ]

[node name="ConfirmSaveDialog" type="WindowDialog" parent="UI"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -137.0
margin_top = -55.0
margin_right = 137.0
margin_bottom = 55.0
window_title = "Unsaved changes"

[node name="Label" type="Label" parent="UI/ConfirmSaveDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.5
margin_top = -35.0
margin_right = 90.5
margin_bottom = -4.0
text = "There are unsaved changes, 
close without saving?"

[node name="CancelButton" type="Button" parent="UI/ConfirmSaveDialog"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = -25.0
margin_right = 61.0
margin_bottom = -5.0
text = "Cancel"

[node name="CloseButton" type="Button" parent="UI/ConfirmSaveDialog"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -25.0
margin_right = 14.0
margin_bottom = -5.0
text = "Discard"

[node name="CloseSaveButton" type="Button" parent="UI/ConfirmSaveDialog"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -97.0
margin_top = -25.0
margin_right = -3.0
margin_bottom = -5.0
text = "Save & Close"

[node name="InvalidNameDialog" type="AcceptDialog" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -69.0
margin_top = -29.0
margin_right = 69.0
margin_bottom = 29.0
dialog_text = "Invalid Track Name"

[connection signal="input_event" from="MoveGizmo/YArea" to="MoveGizmo" method="_on_YArea_input_event"]
[connection signal="input_event" from="MoveGizmo/XArea" to="MoveGizmo" method="_on_XArea_input_event"]
[connection signal="input_event" from="MoveGizmo/ZArea" to="MoveGizmo" method="_on_ZArea_input_event"]
[connection signal="input_event" from="RotateGizmo/XArea" to="RotateGizmo" method="_on_XArea_input_event"]
[connection signal="input_event" from="RotateGizmo/YArea" to="RotateGizmo" method="_on_YArea_input_event"]
[connection signal="input_event" from="RotateGizmo/ZArea" to="RotateGizmo" method="_on_ZArea_input_event"]
[connection signal="text_changed" from="UI/LoadPanel/LoadContainer/TrackName" to="." method="_on_TrackName_text_changed"]
[connection signal="pressed" from="UI/LoadPanel/LoadContainer/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="UI/LoadPanel/LoadContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="UI/LoadPanel/LoadContainer/FlyButton" to="." method="_on_FlyButton_pressed"]
[connection signal="pressed" from="UI/LoadPanel/LoadContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="item_selected" from="UI/LoadPanel/LoadContainer/SceneOption" to="." method="_on_SceneOption_item_selected"]
[connection signal="item_selected" from="UI/ToolPanel/ToolContainer/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="item_activated" from="UI/TreePanel/TrackTree" to="." method="_on_TrackTree_item_activated"]
[connection signal="item_rmb_selected" from="UI/TreePanel/TrackTree" to="." method="_on_TrackTree_item_rmb_selected"]
[connection signal="item_selected" from="UI/TreePanel/TrackTree" to="." method="_on_TrackTree_item_selected"]
[connection signal="index_pressed" from="UI/TreePanel/TrackTree/PopupMenu2" to="." method="_on_PopupMenu2_index_pressed"]
[connection signal="about_to_show" from="UI/LoadDialog" to="." method="_on_LoadDialog_about_to_show"]
[connection signal="item_activated" from="UI/LoadDialog/TrackList" to="." method="_on_TrackList_item_activated"]
[connection signal="item_rmb_selected" from="UI/LoadDialog/TrackList" to="." method="_on_TrackList_item_rmb_selected"]
[connection signal="pressed" from="UI/LoadDialog/NewButton" to="." method="_on_NewButton_pressed"]
[connection signal="index_pressed" from="UI/LoadDialog/PopupMenu" to="." method="_on_PopupMenu_index_pressed"]
[connection signal="pressed" from="UI/ConfirmSaveDialog/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="pressed" from="UI/ConfirmSaveDialog/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="UI/ConfirmSaveDialog/CloseSaveButton" to="." method="_on_CloseSaveButton_pressed"]
